--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,10 @@
             <artifactId>mockito-core</artifactId>
             <version>1.9.0-rc1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.10.8</version>
+        </dependency>
     </dependencies>
 </project>
